--- a/STUDENTS/Denis Bushuev/project/src/style/style.css
+++ b/STUDENTS/Denis Bushuev/project/src/style/style.css
@@ -1,58 +1,13 @@
+html {
+    height: 100%;
+}
+
 body {
-    margin: 0 auto;
-}
-
-.container {
-    width: 100%;
-    display: flex;
-    background-color: darkgrey;
-}
-
-.chat {
-    width: 30%;
-    display: block;
-    margin: 10px;  
-}
-
-.search {
-    width: 100%;
-    height: 30px;
-    padding: 10px;
-    outline: none;
-    border-radius: 20px;
-}
-
-.user {
-    display: block;
-    padding: 5px;
-    height: 80px;
-}
-
-.user:hover {
-    background-color: #5181B8;
-}
-
-.img-user {
-    display: block;
-    padding: 0 5px 0 0;
-    float: left;
-}
-
-.title-user {
-    display: block;
-    font-weight: bold;
-}
-
-.text-user {
-    display: block;
-    margin: 30px 0 0 0;
-}
-
-.msg {
-    display: block;
-    width: 70%;
-    margin: 10px;
+    margin: 0;
+    height: 100%;
     background-image: url(https://blog.jahnelgroup.com/assets/images/presence.jpg);
-    padding: 5px;
-    border-radius: 10px;
+}
+
+#root {
+    height: 100%;
 }
