--- a/STUDENTS/Egor Salomatin/Project/4/src/components/Message/style.css
+++ b/STUDENTS/Egor Salomatin/Project/4/src/components/Message/style.css
@@ -7,8 +7,12 @@
 }
 
 .msg {
-    border: 2px solid white;
-    background-color: white;
+    border: 2px solid #fefbd8;
+    border-radius: 8px;
+    background-color: #fefbd8;
+    padding: 8px;
+    margin-left: 3px;
+    margin-bottom: 10px;
 }
 
 .msg-author {
