Добавлен Layout и список чатов. Робот отвечает рандомно.

--- a/STUDENTS/Yuriy Yastrebov/project/src/components/Messages/style.css
+++ b/STUDENTS/Yuriy Yastrebov/project/src/components/Messages/style.css
@@ -22,8 +22,7 @@
     border: none;
 }
 .chatSendButton {
-    padding-right: 10px;
-    display: flex;
+    /* padding-left: 200px; */
 }
 .message-left {
     text-align: left;
@@ -32,4 +31,7 @@
 .message-right {
     text-align: right;
     color: darkolivegreen;
+}
+.sendIcon {
+    /* border: 1px solid grey; */
 }
