--- a/STUDENTS/Dam Quang Tung/HW2/src/style.css
+++ b/STUDENTS/Dam Quang Tung/HW2/src/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #root {
-    background-image: url(https://img2.akspic.ru/image/25672-morskaya_biologiya-kosmicheskoe_prostranstvo-atmosfera-vselennaya-temnota-1920x1200.jpg);
+    background-color: #67e4eb;
     background-size: auto;
     margin: auto;
     width: 400px;
