Добавил переключение между чатами + добавление нового чата. Но версия пока НЕРАБОЧАЯ

--- a/STUDENTS/Yuriy Yastrebov/project/src/components/Messages/style.css
+++ b/STUDENTS/Yuriy Yastrebov/project/src/components/Messages/style.css
@@ -11,6 +11,7 @@
 .chatBody {
     padding: 10px;
     height: 700px;
+	overflow-y: scroll;
 }
 .chatSendArea {
     background-color: lightskyblue;
@@ -21,9 +22,6 @@
     resize: none;
     border: none;
 }
-.chatSendButton {
-    /* padding-left: 200px; */
-}
 .message-left {
     text-align: left;
     color: darkslategray;
@@ -31,7 +29,4 @@
 .message-right {
     text-align: right;
     color: darkolivegreen;
-}
-.sendIcon {
-    /* border: 1px solid grey; */
 }
