--- a/STUDENTS/Denis Bushuev/project/src/components/MessageField/style.css
+++ b/STUDENTS/Denis Bushuev/project/src/components/MessageField/style.css
@@ -2,20 +2,15 @@
     display: flex;
     flex-direction: column;
     background-color: #e2e2e2;
-    height: 50%;
+    height: 300px;
     width: 100%;
-    padding: 20px;
     overflow-y: scroll;
-    border-radius: 3px;
-    border: 1px solid black;
 }
 
 .message-head {
     height: 100%;
-    width: 50%;
     margin: auto;
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: column;
 }
@@ -31,4 +26,5 @@
 .allSend {
     display: flex;
     width: 100%;
+    padding: 10px 0 0 0;
 }
